index - добавил хедер

--- a/index.html
+++ b/index.html
@@ -5,8 +5,51 @@
     <title>HTML Academy: Девайс</title>
   </head>
   <body>
+    <header class="main-header">
+      <nav class="main-navigation">
+        <a class="main-header-logo">
+          <img src="img/logo.svg" width="111" height="222" alt="Логотип интернет-магазина «Device»">
+        </a>
+        <ul class="user-navigation">
+          <li class="search-open">Поиск по сайту</li>
+          <li class="login-link">Войти</li>
+          <li class="compare"><a href="compare.html">Сравнить</a></li>
+          <li class="basket"><a href="basket.html">Корзина</a></li>
+        </ul>
+        <ul class="site-navigation">
+          <li><a href="catalog.html">Каталог товаров</a></li>
+          <li><span class="catalog-open">+</span></li>
+          <li><a href="delivery.html">Доставка</a></li>
+          <li><a href="warranty.html">Гарантия</a></li>
+          <li><a href="contacts.html">Контакты</a></li>
+        </ul>
+        <ul class="header-catalog-menu">
+          <li><a href="catalog-vr.html">Виртуальная реальность</a></li>
+          <li><a href="catalog-monopods.html">Моноподы для селфи</a></li>
+          <li><a href="catalog-actioncameras.html">Экшн-камеры</a></li>
+          <li><a href="catalog-fitness.html">Фитнес-браслеты</a></li>
+          <li><a href="catalog-smartwatches.html">Умные часы</a></li>
+          <li><a href="catalog-quadcopters.html">Квадрокоптеры</a></li>
+          <li><a href=".html"></a></li>
+          <li><a href=".html"></a></li>
+        </ul>
+      </nav>
+    </header>
+    <main class="container">
+      
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+
+
+
+
+
+    </main>
+
+
+
+
+
+
 
   </body>
 </html>
