index - Начал делать слайдер

--- a/index.html
+++ b/index.html
@@ -36,8 +36,23 @@
       </nav>
     </header>
     <main class="container">
-      
+      <h1 class="visually-hidden">«Device» - интернет-магазин гаджетов</h1>
+      <section class="slider-featured-products">
+        <h2 class="visually-hidden">Рекомендуемые товары</h2>
+        <ul class="featured-products">
+          <li class="featured-item">
+            <h3 class="visually-hidden">Длинная палка для селфи модель XXX</h3>
+            <p class="featured-item-image">
+              <a href="catalog-item.html">
+                <img src="img/product-1.jpg" width="111" height="222" alt="Длинная палка для селфи модель XXX">
+              </a>
+            </p>
 
+
+          </li>
+        </ul>
+
+      </section>
 
 
 
