index - Добавил слайдер

--- a/index.html
+++ b/index.html
@@ -47,11 +47,98 @@
                 <img src="img/product-1.jpg" width="111" height="222" alt="Длинная палка для селфи модель XXX">
               </a>
             </p>
+            <p class="featured-item-number"><span>01</span></p>
+            <a href="catalog-item.html">
+              <p class="featured-item-slogan">Делай селфи,<br>
+                как Бен Стиллер!
+              </p>
+            </a>
+            <p class="featured-item-description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм. </p>
+            <a class="button featured-item-button" href="catalog-item.html">Подробнее</a>
+            <ul class="slider-pagination-list">
+              <li class="slider-pagination-item pagination-item-current"><a></a></li>
+              <li class="slider-pagination-item"><a href="#"></a></li>
+              <li class="slider-pagination-item"><a href="#"></a></li>
+            </ul>
+            <h4 class="visually-hidden">Основные параметры товара</h3>
+            <table class="slider-table">
+              <tr class="slider-table-head">
+                <td>Длина палки</td>
+                <td>Вес палки</td>
+                <td>Материал</td>
+              </tr>
+              <tr class="slider-table-data">
+                <td>8,5 м</td>
+                <td>5 кг</td>
+                <td>Карбон</td>
+              </tr>
+            </table>
+          </li>
 
+          <li class="featured-item">
+            <h3 class="visually-hidden">Мотивирующий фитнес-браслет ХХХ</h3>
+            <p class="featured-item-image">
+              <a href="catalog-item.html">
+                <img src="img/product-1.jpg" width="111" height="222" alt="Мотивирующий фитнес-браслет ХХХ">
+              </a>
+            </p>
+            <p class="featured-item-number"><span>02</span></p>
+            <a href="catalog-item.html">
+              <p class="featured-item-slogan">Худеем<br>
+                правильно!
+              </p>
+            </a>
+            <p class="featured-item-description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
+            <a class="button featured-item-button" href="catalog-item.html">Подробнее</a>
+            <ul class="slider-pagination-list">
+              <li class="slider-pagination-item"><a href="#"></a></li>
+              <li class="slider-pagination-item pagination-item-current"><a></a></li>
+              <li class="slider-pagination-item"><a href="#"></a></li>
+            </ul>
+            <h4 class="visually-hidden">Основные параметры товара</h3>
+            <table class="slider-table">
+              <tr class="slider-table-head">
+                <td>Без подзарядки</td>
+              </tr>
+              <tr class="slider-table-data">
+                <td>48 часов</td>
+              </tr>
+            </table>
+          </li>
 
+          <li class="featured-item">
+            <h3 class="visually-hidden">Квадрокоптер с лазером модель XXX</h3>
+            <p class="featured-item-image">
+              <a href="catalog-item.html">
+                <img src="img/product-1.jpg" width="111" height="222" alt="Квадрокоптер с лазером  модель XXX">
+              </a>
+            </p>
+            <p class="featured-item-number"><span>01</span></p>
+            <a href="catalog-item.html">
+              <p class="featured-item-slogan">Порхает как бабочка,<br>
+                жалит как пчела!
+              </p>
+            </a>
+            <p class="featured-item-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
+            <a class="button featured-item-button" href="catalog-item.html">Подробнее</a>
+            <ul class="slider-pagination-list">
+              <li class="slider-pagination-item"><a href="#"></a></li>
+              <li class="slider-pagination-item"><a href="#"></a></li>
+              <li class="slider-pagination-item pagination-item-current"><a></a></li>
+            </ul>
+            <h4 class="visually-hidden">Основные параметры товара</h3>
+            <table class="slider-table">
+              <tr class="slider-table-head">
+                <td>Дальность полета</td>
+                <td>Радиус поражения</td>
+              </tr>
+              <tr class="slider-table-data">
+                <td>800 м</td>
+                <td>50 м</td>
+              </tr>
+            </table>
           </li>
         </ul>
-
       </section>
 
 
