index - добавил блок разделы каталога

--- a/index.html
+++ b/index.html
@@ -30,8 +30,6 @@
           <li><a href="catalog-fitness.html">Фитнес-браслеты</a></li>
           <li><a href="catalog-smartwatches.html">Умные часы</a></li>
           <li><a href="catalog-quadcopters.html">Квадрокоптеры</a></li>
-          <li><a href=".html"></a></li>
-          <li><a href=".html"></a></li>
         </ul>
       </nav>
     </header>
@@ -60,7 +58,7 @@
               <li class="slider-pagination-item"><a href="#"></a></li>
               <li class="slider-pagination-item"><a href="#"></a></li>
             </ul>
-            <h4 class="visually-hidden">Основные параметры товара</h3>
+            <h4 class="visually-hidden">Основные параметры товара</h4>
             <table class="slider-table">
               <tr class="slider-table-head">
                 <td>Длина палки</td>
@@ -95,7 +93,7 @@
               <li class="slider-pagination-item pagination-item-current"><a></a></li>
               <li class="slider-pagination-item"><a href="#"></a></li>
             </ul>
-            <h4 class="visually-hidden">Основные параметры товара</h3>
+            <h4 class="visually-hidden">Основные параметры товара</h4>
             <table class="slider-table">
               <tr class="slider-table-head">
                 <td>Без подзарядки</td>
@@ -126,7 +124,7 @@
               <li class="slider-pagination-item"><a href="#"></a></li>
               <li class="slider-pagination-item pagination-item-current"><a></a></li>
             </ul>
-            <h4 class="visually-hidden">Основные параметры товара</h3>
+            <h4 class="visually-hidden">Основные параметры товара</h4>
             <table class="slider-table">
               <tr class="slider-table-head">
                 <td>Дальность полета</td>
@@ -141,6 +139,17 @@
         </ul>
       </section>
 
+      <section>
+        <h2 class="visually-hidden">Разделы каталога</h2>
+        <ul class="catalog-menu">
+          <li class="catalog-menu-vr"><a href="catalog-vr.html">Виртуальная реальность</a></li>
+          <li class="catalog-menu-monopods"><a href="catalog-monopods.html">Моноподы для селфи</a></li>
+          <li class="catalog-menu-actioncameras"><a href="catalog-actioncameras.html">Экшн-камеры</a></li>
+          <li class="catalog-menu-fitness"><a href="catalog-fitness.html">Фитнес-браслеты</a></li>
+          <li class="catalog-menu-smartwatches"><a href="catalog-smartwatches.html">Умные часы</a></li>
+          <li class="catalog-menu-quadcopters"><a href="catalog-quadcopters.html">Квадрокоптеры</a></li>
+        </ul>
+      </section>
 
 
 
