index - добавил блок Услуги

--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
         </ul>
       </section>
 
-      <section>
+      <section class="catalog-menu">
         <h2 class="visually-hidden">Разделы каталога</h2>
-        <ul class="catalog-menu">
+        <ul class="catalog-menu-list">
           <li class="catalog-menu-vr"><a href="catalog-vr.html">Виртуальная реальность</a></li>
           <li class="catalog-menu-monopods"><a href="catalog-monopods.html">Моноподы для селфи</a></li>
           <li class="catalog-menu-actioncameras"><a href="catalog-actioncameras.html">Экшн-камеры</a></li>
@@ -151,7 +151,16 @@
         </ul>
       </section>
 
-
+      <section class="services">
+        <h2 class="visually-hidden">Услуги</h2>
+        <ul class="services-list">
+          <li class="service-button service-current"><a href="#">Доставка</a></li>
+          <li class="service-button"><a href="#">Гарантия</a></li>
+          <li class="service-button"><a href="#">Кредит</a></li>
+        </ul>
+        <h3 class="service-title">Доставка</h3>
+        <p class="service-description">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+      </section>
 
 
     </main>
