index - добавил блок логотипов

--- a/index.html
+++ b/index.html
@@ -162,6 +162,31 @@
         <p class="service-description">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
       </section>
 
+      <section class="logotypes">
+        <h2 class="visually-hidden">Логотипы производителей</h2>
+        <ul class="logotypes-list">
+          <li class="logotypes-item">
+            <a href="#">
+              <img src="img/logotype-1.jpg" width="111" height="222" alt="Логотип DJI">
+            </a>
+          </li>
+          <li class="logotypes-item">
+            <a href="#">
+              <img src="img/logotype-2.jpg" width="111" height="222" alt="Логотип SP Gadgets">
+            </a>
+          </li>
+          <li class="logotypes-item">
+            <a href="#">
+              <img src="img/logotype-3.jpg" width="111" height="222" alt="Логотип GoPro">
+            </a>
+          </li>
+          <li class="logotypes-item">
+            <a href="#">
+              <img src="img/logotype-4.jpg" width="111" height="222" alt="Логотип VIVE">
+            </a>
+          </li>
+        </ul>
+      </section>
 
     </main>
 
