index - добавил блоки О нас, Контакты

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
               </p>
             </a>
             <p class="featured-item-description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм. </p>
-            <a class="button featured-item-button" href="catalog-item.html">Подробнее</a>
+            <a href="catalog-item.html">
+              <span class="button featured-item-button">Подробнее</span>
+            </a>
             <ul class="slider-pagination-list">
               <li class="slider-pagination-item pagination-item-current"><a></a></li>
               <li class="slider-pagination-item"><a href="#"></a></li>
@@ -87,7 +89,9 @@
               </p>
             </a>
             <p class="featured-item-description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
-            <a class="button featured-item-button" href="catalog-item.html">Подробнее</a>
+            <a href="catalog-item.html">
+              <span class="button featured-item-button">Подробнее</span>
+            </a>
             <ul class="slider-pagination-list">
               <li class="slider-pagination-item"><a href="#"></a></li>
               <li class="slider-pagination-item pagination-item-current"><a></a></li>
@@ -118,7 +122,9 @@
               </p>
             </a>
             <p class="featured-item-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
-            <a class="button featured-item-button" href="catalog-item.html">Подробнее</a>
+            <a href="catalog-item.html">
+              <span class="button featured-item-button">Подробнее</span>
+            </a>
             <ul class="slider-pagination-list">
               <li class="slider-pagination-item"><a href="#"></a></li>
               <li class="slider-pagination-item"><a href="#"></a></li>
@@ -154,9 +160,21 @@
       <section class="services">
         <h2 class="visually-hidden">Услуги</h2>
         <ul class="services-list">
-          <li class="service-button service-current"><a href="#">Доставка</a></li>
-          <li class="service-button"><a href="#">Гарантия</a></li>
-          <li class="service-button"><a href="#">Кредит</a></li>
+          <li>
+            <a href="#">
+              <span class="button service-button service-current">Доставка</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <span class="button service-button">Гарантия</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <span class="button service-button">Кредит</span>
+            </a>
+          </li>
         </ul>
         <h3 class="service-title">Доставка</h3>
         <p class="service-description">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
@@ -188,6 +206,42 @@
         </ul>
       </section>
 
+      <section class="about-us">
+        <h2>
+          <a href="about-us.html">
+            <span class="about-us-title">О нас</span>
+          </a>
+        </h2>
+        <p class="about-us-description">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+        <p class="about-us-description">Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями</p>
+        <ul class="transport-list">
+          <li class="transport-item"><a href="#">Деловые Линии</a></li>
+          <li class="transport-item"><a href="#">Автотрейдинг</a></li>
+          <li class="transport-item"><a href="#">ЖелДорЭкспедиция</a></li>
+        </ul>
+        <p>
+          <a href="about-us.html">
+            <span class="button about-us-button">Подробнее о нас</span>
+          </a>
+        </p>
+      </section>
+
+      <section class="contacts">
+        <h2>
+          <a href="contacts.html">
+            <span class="contacts-title">Контакты</span>
+          </a>
+        </h2>
+        <p class="contacts-description">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
+        <div class="contacts-map">
+          <iframe src="https://www.google.com/maps/embed?pb=" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+        <p>
+          <a href="contacts.html">
+            <span class="button about-us-button">Подробнее о нас</span>
+          </a>
+        </p>
+      </section>
     </main>
 
 
