--- a/index.html
+++ b/index.html
@@ -244,11 +244,36 @@
       </section>
     </main>
 
-
-
-
-
-
-
+    <footer class="main-footer">
+      <a class="footer-logo">
+        <img src="img/logo.svg" width="111" height="222" alt="Логотип интернет-магазина «Device»">
+      </a>
+      <ul class="footer-user-navigation">
+        <li class="login-link">Войти</li>
+        <li class="compare"><a href="compare.html">Сравнить</a></li>
+        <li class="basket"><a href="basket.html">Корзина</a></li>
+      </ul>
+      <p class="footer-address">г. Москва, ул. Строителей, 15</p>
+      <div class="footer-navigation">
+        <ul>
+          <li><a href="delivery.html">Доставка</a></li>
+          <li><a href="warranty.html">Гарантия</a></li>
+          <li><a href="contacts.html">Контакты</a></li>
+        </ul>
+      </div>
+      <p class="footer-tel">Тел.: +7 (495) 495-95-95</p>
+      <div class="footer-social">
+        <ul>
+          <li><a class="social-button" href="#">Вконтакте</a></li>
+          <li><a class="social-button" href="#">Инстаграм</a></li>
+          <li><a class="social-button" href="#">Твиттер</a></li>
+        </ul>
+      </div>
+      <p class="footer-copyright">
+        <a class="button">
+          <img src="img/htmlacademylogo.svg" width="111" height="222" alt="Логотип HTML Academy">
+        </a>
+      </p>
+    </footer>
   </body>
 </html>
