index - Поправил мелочи

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <img src="img/product-1.jpg" width="111" height="222" alt="Квадрокоптер с лазером  модель XXX">
               </a>
             </p>
-            <p class="featured-item-number"><span>01</span></p>
+            <p class="featured-item-number"><span>03</span></p>
             <a href="catalog-item.html">
               <p class="featured-item-slogan">Порхает как бабочка,<br>
                 жалит как пчела!
@@ -234,11 +234,11 @@
         </h2>
         <p class="contacts-description">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
         <div class="contacts-map">
-          <iframe src="https://www.google.com/maps/embed?pb=" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=" width="600" height="450" style="border:0" allowfullscreen></iframe>
         </div>
         <p>
           <a href="contacts.html">
-            <span class="button about-us-button">Подробнее о нас</span>
+            <span class="button write-us-button">Напишите нам</span>
           </a>
         </p>
       </section>
