catalog - поправил мелочи

--- a/catalog.html
+++ b/catalog.html
@@ -46,6 +46,11 @@
         <!-- Здесь будет форма -->
       </section>
 
+      <section class="sorting">
+        <h2 class="sorting-title">Сортировка:</h2>
+        <!-- Здесь будет сортировка -->
+      </section>
+
       <section class="catalog">
         <h2 class="visually-hidden">Список моноподов для селфи</h2>
         <ul class="catalog-list">
