Сохранил изображения, поставил в разметку контентные изображения.

--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo">
-          <img src="img/logo.svg" width="111" height="222" alt="Логотип интернет-магазина «Device»">
+          <img src="img/logo-device-black.svg" width="164" height="35" alt="Логотип интернет-магазина «Device»">
         </a>
         <ul class="user-navigation">
           <li class="search-open">Поиск по сайту</li>
@@ -78,7 +78,7 @@
             </h3>
             <p class="catalog-item-image">
               <a href="catalog-item.html">
-                <img src="img/product-1.jpg" width="220" height="165" alt="Любительская селфи-палка">
+                <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
               </a>
             </p>
             <p class="catalog-item-price">
@@ -93,7 +93,7 @@
             </h3>
             <p class="catalog-item-image">
               <a href="catalog-item.html">
-                <img src="img/product-2.jpg" width="220" height="165" alt="Профессиональная селфи-палка">
+                <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
               </a>
             </p>
             <p class="catalog-item-price">
@@ -108,7 +108,7 @@
             </h3>
             <p class="catalog-item-image">
               <a href="catalog-item.html">
-                <img src="img/product-3.jpg" width="220" height="165" alt="Непотопляемая селфи-палка">
+                <img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
               </a>
             </p>
             <p class="catalog-item-price">
@@ -123,7 +123,7 @@
             </h3>
             <p class="catalog-item-image new-item">
               <a href="catalog-item.html">
-                <img src="img/product-4.jpg" width="220" height="165" alt="Селфи-палка «Следуй за мной»">
+                <img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
               </a>
             </p>
             <p class="catalog-item-price">
@@ -143,7 +143,7 @@
 
     <footer class="main-footer">
       <a class="footer-logo">
-        <img src="img/logo.svg" width="111" height="222" alt="Логотип интернет-магазина «Device»">
+        <img src="img/logo-device-yellow.svg" width="164" height="35" alt="Логотип интернет-магазина «Device»">
       </a>
       <ul class="footer-user-navigation">
         <li class="login-link">Войти</li>
@@ -168,7 +168,7 @@
       </div>
       <p class="footer-copyright">
         <a class="button">
-          <img src="img/htmlacademylogo.svg" width="111" height="222" alt="Логотип HTML Academy">
+          <img src="img/logo-html.svg" width="27" height="35" alt="Логотип HTML Academy">
         </a>
       </p>
     </footer>
