--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo">
-          <img src="img/logo.svg" width="111" height="222" alt="Логотип интернет-магазина «Device»">
+          <img src="img/logo-device-black.svg" width="164" height="35" alt="Логотип интернет-магазина «Device»">
         </a>
         <ul class="user-navigation">
           <li class="search-open">Поиск по сайту</li>
@@ -234,7 +234,8 @@
         </h2>
         <p class="contacts-description">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
         <div class="contacts-map">
-          <iframe src="https://www.google.com/maps/embed?pb=" width="600" height="450" style="border:0" allowfullscreen></iframe>
+          <!-- <iframe src="https://www.google.com/maps/embed?pb=" width="600" height="450" style="border:0" allowfullscreen></iframe> -->
+          <img src="img/map.jpg" width="560" height="222" alt="Карта">
         </div>
         <p>
           <a href="contacts.html">
@@ -246,7 +247,7 @@
 
     <footer class="main-footer">
       <a class="footer-logo">
-        <img src="img/logo.svg" width="111" height="222" alt="Логотип интернет-магазина «Device»">
+        <img src="img/logo-device-yellow.svg" width="164" height="35" alt="Логотип интернет-магазина «Device»">
       </a>
       <ul class="footer-user-navigation">
         <li class="login-link">Войти</li>
@@ -271,7 +272,7 @@
       </div>
       <p class="footer-copyright">
         <a class="button">
-          <img src="img/htmlacademylogo.svg" width="111" height="222" alt="Логотип HTML Academy">
+          <img src="img/logo-html.svg" width="27" height="35" alt="Логотип HTML Academy">
         </a>
       </p>
     </footer>
