--- a/catalog.html
+++ b/catalog.html
@@ -11,14 +11,18 @@
           <img src="img/logo-device-black.svg" width="164" height="35" alt="Логотип интернет-магазина «Device»">
         </a>
         <ul class="user-navigation">
-          <li class="search-open">Поиск по сайту</li>
-          <li class="login-link">Войти</li>
+          <li class="search-open"><a href="#">Поиск по сайту</a></li>
+          <li class="login-link"><a href="login.html">Войти</a></li>
           <li class="compare"><a href="compare.html">Сравнить</a></li>
           <li class="basket"><a href="basket.html">Корзина</a></li>
         </ul>
         <ul class="site-navigation">
           <li><a href="catalog.html">Каталог товаров</a></li>
-          <li><span class="catalog-open">+</span></li>
+          <li>
+            <button class="button catalog-open-button" type="button">
+              <p class="visually-hidden">Раскрыть меню каталога товаров</p>
+            </button>
+          </li>
           <li><a href="delivery.html">Доставка</a></li>
           <li><a href="warranty.html">Гарантия</a></li>
           <li><a href="contacts.html">Контакты</a></li>
