--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="main-header">
@@ -250,35 +252,37 @@
     </main>
 
     <footer class="main-footer">
-      <a class="footer-logo">
-        <img src="img/logo-device-yellow.svg" width="164" height="35" alt="Логотип интернет-магазина «Device»">
-      </a>
-      <ul class="footer-user-navigation">
-        <li class="login-link"><a href="login.html">Войти</a></li>
-        <li class="compare"><a href="compare.html">Сравнить</a></li>
-        <li class="basket"><a href="basket.html">Корзина</a></li>
-      </ul>
-      <p class="footer-address">г. Москва, ул. Строителей, 15</p>
-      <div class="footer-navigation">
+      <div class="footer-top">
+        <a class="footer-logo">
+          <img src="img/logo-device-yellow.svg" width="164" height="35" alt="Логотип интернет-магазина «Device»">
+        </a>
+        <ul class="footer-user-navigation">
+          <li class="login-link"><a href="login.html">Войти</a></li>
+          <li class="compare"><a href="compare.html">Сравнить</a></li>
+          <li class="basket"><a href="basket.html">Корзина</a></li>
+        </ul>
+      </div>
+      <div class="footer-middle">
+        <p class="footer-address">г. Москва, ул. Строителей, 15</p>
         <ul>
           <li><a href="delivery.html">Доставка</a></li>
           <li><a href="warranty.html">Гарантия</a></li>
           <li><a href="contacts.html">Контакты</a></li>
         </ul>
+        <p class="footer-tel">Тел.: +7 (495) 495-95-95</p>
       </div>
-      <p class="footer-tel">Тел.: +7 (495) 495-95-95</p>
-      <div class="footer-social">
-        <ul>
-          <li><a class="social-button" href="#">Вконтакте</a></li>
+      <div class="footer-bottom">
+        <ul class="social-buttons">
+          <li><a class="social-button" href="#">Фейсбук</a></li>
           <li><a class="social-button" href="#">Инстаграм</a></li>
           <li><a class="social-button" href="#">Твиттер</a></li>
         </ul>
+        <p class="footer-copyright">
+          <a class="button">
+            <img src="img/logo-html.svg" width="27" height="35" alt="Логотип HTML Academy">
+          </a>
+        </p>
       </div>
-      <p class="footer-copyright">
-        <a class="button">
-          <img src="img/logo-html.svg" width="27" height="35" alt="Логотип HTML Academy">
-        </a>
-      </p>
     </footer>
 
     <section class="modal modal-write-us">
