index - Добавил стили хедера

--- a/index.html
+++ b/index.html
@@ -211,11 +211,9 @@
       </section>
 
       <section class="about-us">
-        <h2>
-          <a href="about-us.html">
-            <span class="about-us-title">О нас</span>
-          </a>
-        </h2>
+        <a href="about-us.html">
+          <h2 class="about-us-title">О нас</h2>
+        </a>
         <p class="about-us-description">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
         <p class="about-us-description">Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями</p>
         <ul class="transport-list">
