--- a/index.html
+++ b/index.html
@@ -222,18 +222,16 @@
           <li class="transport-item"><a href="#">ЖелДорЭкспедиция</a></li>
         </ul>
         <p>
-          <a href="about-us.html">
-            <span class="button about-us-button">Подробнее о нас</span>
+          <a class="button about-us-button" href="about-us.html">
+            Подробнее о нас
           </a>
         </p>
       </section>
 
       <section class="contacts">
-        <h2>
           <a href="contacts.html">
-            <span class="contacts-title">Контакты</span>
+            <h2 class="contacts-title">Контакты</h2>
           </a>
-        </h2>
         <p class="contacts-description">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
         <div class="contacts-map">
           <!-- <iframe src="https://www.google.com/maps/embed?pb=" width="600" height="450" style="border:0" allowfullscreen></iframe> -->
@@ -242,8 +240,8 @@
           </a>
         </div>
         <p>
-          <a href="write-us.html">
-            <span class="button write-us-button">Напишите нам</span>
+          <a class="button write-us-button" href="write-us.html">
+            Напишите нам
           </a>
         </p>
       </section>
@@ -251,8 +249,8 @@
 
     <footer class="main-footer">
       <div class="footer-top">
-        <a class="footer-logo">
-          <img src="img/logo-device-yellow.svg" width="164" height="35" alt="Логотип интернет-магазина «Device»">
+        <a>
+          <img class="footer-logo" src="img/logo-device-yellow.svg" width="164" height="35" alt="Логотип интернет-магазина «Device»">
         </a>
         <ul class="footer-user-navigation">
           <li class="login-link"><a href="login.html">Войти</a></li>
