Добавил первичные стили для футера и модального окна

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
       </div>
       <div class="footer-middle">
         <p class="footer-address">г. Москва, ул. Строителей, 15</p>
-        <ul>
+        <ul class="middle-menu">
           <li><a href="delivery.html">Доставка</a></li>
           <li><a href="warranty.html">Гарантия</a></li>
           <li><a href="contacts.html">Контакты</a></li>
@@ -269,12 +269,12 @@
       </div>
       <div class="footer-bottom">
         <ul class="social-buttons">
-          <li><a class="social-button" href="#">Фейсбук</a></li>
-          <li><a class="social-button" href="#">Инстаграм</a></li>
-          <li><a class="social-button" href="#">Твиттер</a></li>
+          <li><a class="social-button" href="#" aria-label="Фейсбук">Фейсбук</a></li>
+          <li><a class="social-button" href="#" aria-label="Инстаграм">Инстаграм</a></li>
+          <li><a class="social-button" href="#" aria-label="Твиттер">Твиттер</a></li>
         </ul>
         <p class="footer-copyright">
-          <a class="button">
+          <a href="https://htmlacademy.ru/">
             <img src="img/logo-html.svg" width="27" height="35" alt="Логотип HTML Academy">
           </a>
         </p>
@@ -285,15 +285,15 @@
       <h2 class="visually-hidden">Форма письма</h2>
       <form class="write-us-form" action="https://echo.htmlacademy.ru" method="post">
         <p>
-          <label class="write-us-label" for="user-name">Ваше имя:</label>
+          <label class="write-us-label" for="user-name">Ваше имя:</label><br>
           <input class="write-us-name" id="user-name" type="text" name="user-name" placeholder="Имя Фамилия">
         </p>
         <p>
-          <label class="write-us-label" for="user-email">Ваш e-mail:</label>
+          <label class="write-us-label" for="user-email">Ваш e-mail:</label><br>
           <input class="write-us-email" id="user-email" type="email" name="user-email" placeholder="email@example.com">
         </p>
         <p>
-          <label class="write-us-label" for="email-text">Текст письма:</label>
+          <label class="write-us-label" for="email-text">Текст письма:</label><br>
           <input class="write-us-text" id="email-text" type="text" name="email-text" placeholder="В свободной форме">
         </p>
         <button class="button email-send-button" type="submit">
